# helpers_cmake

./: .DppLibFinder.cmake.kate-swp  Config.cmake.in  DBoostFinder.cmake  DCMakeColors.cmake  DGoogleTestHelper.cmake  DInstall.cmake  DMainHelper.cmake  DMakeOptions.cmake  DPeVersion.cmake  DPrintHelpers.cmake  DppLibFinder.cmake  FindIxwebsocket.cmake  FindRaylib.cmake  Finddpplib.cmake  VersionInfo.in  VersionResource.rc  generate_product_version.cmake
_DCmakeHelpers.todo/: CMakeLists-build-docs.txt  CMakeLists-curl.txt  CMakeLists-update-git-modules.txt  CMakeLists.txt  DppToolsFinder.cmake  dump_cmake_properties.cmake
_From_old_dpplib/: CMakeLists copy.txt  Config.cmake.in  DBoostFinder.cmake  DInstall.cmake  FindFacilio.cmake  FindNbnet.cmake  FindRaylib.cmake  Findlg.cmake  Findpigpio.cmake  VersionInfo.in
